--- a/views/lib/forms/form-features.hbs
+++ b/views/lib/forms/form-features.hbs
@@ -1,10 +1,14 @@
 <div class="form-group">
 <div style="text-align: center">
-    <img src="https://media.giphy.com/media/3oz8xBkRsgPTnbK1GM/giphy.gif" style="width: 100%; height: auto"/>
-    Es gibt neue Features in der Schul-Cloud. Für weitere Informationen folgen Sie doch bitte diesem <a href="/help/#changelog">Link</a>.
+    <img src="https://media.giphy.com/media/3oz8xBkRsgPTnbK1GM/giphy.gif" style="width: 50%; height: auto"/>
+    <div>
+        Es gibt neue Features in der Schul-Cloud.
+        <br>
+        Für weitere Informationen folgen Sie doch bitte diesem <a href="/help/#changelog">Link</a>.
+    </div>
 </div>
-<div style="text-align: right">
-    <button type="button" class="btn btn-secondary btn-close" style="margin-right: 8px">
+<div style="text-align: center; padding-top: 8px;">
+    <button type="button" class="btn btn-secondary btn-close" style="width: 95%;">
         {{closeLabel}}
     </button>
 </div>
