--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -40,7 +40,7 @@
                     <input type="password" name="password_new" id="password_new" class="form-control form-control-lg"
                            placeholder="***************"
                            pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
-                           title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl oder Sonderzeichen">
+                           title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen">
                 </div>
 
                 <div class="form-group">
