--- a/views/administration/forms/form-import.hbs
+++ b/views/administration/forms/form-import.hbs
@@ -23,5 +23,5 @@
         <br>Die ausgewählte .csv Datei sollte dann folgende Spalten beinhalten:<br>
         <b>firstName</b>;<b>lastName</b>;<b>email</b><br>
         Die vorherige Zeile muss als erste Zeile in der CSV Datei stehen.<br>
-        Als Trennzeichen muss ";" verwendet werden.</p>
+        Als Trennzeichen muss "," verwendet werden.</p>
 </div>
