--- a/views/administration/forms/form-import.hbs
+++ b/views/administration/forms/form-import.hbs
@@ -21,7 +21,7 @@
 <div class="form-group">
     <p class="small">Falls Sie ihr derzeitiges System nicht in der Liste unterstützter Systeme finden, wählen Sie bitte "Anderes".
         <br>Die ausgewählte .csv Datei sollte dann folgende Spalten beinhalten:<br>
-        <b>firstName</b>;<b>lastName</b>;<b>email</b><br>
+        <b>firstName</b>,<b>lastName</b>,<b>email</b><br>
         Die vorherige Zeile muss als erste Zeile in der CSV Datei stehen.<br>
         Als Trennzeichen muss "," verwendet werden.</p>
 </div>
