--- a/views/administration/forms/form-import.hbs
+++ b/views/administration/forms/form-import.hbs
@@ -19,9 +19,9 @@
 </div>
 
 <div class="form-group">
-    <p class="small">Falls Sie ihr derzeitiges System nicht in der Liste unterstützter Systeme finden, wählen Sie bitte "Anderes".
-        <br>Die ausgewählte .csv Datei sollte dann folgende Spalten beinhalten:<br>
-        <b>firstName</b>,<b>lastName</b>,<b>email</b><br>
-        Die vorherige Zeile muss als erste Zeile in der CSV Datei stehen.<br>
+    <p>Falls Sie ihr derzeitiges System nicht in der Liste unterstützter Systeme finden, wählen Sie bitte "Anderes".
+        <br>Die ausgewählte .csv Datei sollte dann nach folgendem Schema aufgebaut sein:<br>
+        <img src="/images/csv_example.png" />
+        <br>
         Als Trennzeichen muss "," verwendet werden.</p>
 </div>
