--- a/views/administration/school.hbs
+++ b/views/administration/school.hbs
@@ -1,35 +1,69 @@
 {{#extend "administration/administration"}}
+    {{#content "styles" mode="append"}}
+        <link rel="stylesheet" href="/styles/administration/school.css"/>
+    {{/content}}
+
     {{#content "page"}}
         <div class="route-administration">
             <section class="section-school section-default">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm-12 no-padding">
+                            <!-- Admin View -->
+                            {{#userHasPermission 'ADMIN_VIEW'}}
+                                    <h5>Schule</h5>
 
-                            <h5>Schule</h5>
+                                <form action="/administration/schools/{{../currentSchool}}" method="post" class="edit-form-school">
+                                    <input type="hidden" name="_method" value="patch" />
 
-                            <form action="/administration/schools/{{currentSchool}}" method="post" class="edit-form-school">
-                                <input type="hidden" name="_method" value="patch" />
+                                    <div class="form-group">
+                                        <label>Name der Schule</label>
+                                        <input value="{{../school.name}}" type="text" class="form-control" name="name" placeholder="Einhorn Gymnasium" required />
+                                    </div>
 
-                                <div class="form-group">
-                                    <label>Name der Schule</label>
-                                    <input value="{{school.name}}" type="text" class="form-control" name="name" placeholder="Einhorn Gymnasium" required />
+                                    {{#if ../school.fileStorageType}}
+                                    <div class="form-group">
+                                        <label>Cloud-Storage Anbieter</label>
+                                        <select name="fileStorageType" type="text">
+                                            {{#each ../provider}}
+                                                <option value="{{this.value}}" {{#if this.selected}}selected{{/if}}>{{this.label}}</option>
+                                            {{/each}}
+                                        </select>
+                                    </div>
+                                    {{/if}}
+
+                                    <button type="submit" class="btn btn-primary btn-submit">Speichern</button>
+
+                                </form>
+                            {{/userHasPermission}}
+
+                            <!-- Teacher View -->
+                            {{#userHasPermission 'STUDENT_CREATE'}}
+                                <div class="row card-deck-row">
+                                    <div class="col-md-6 col-sm-6 col-xs-12">
+                                        <div class="card h-100 teacher-option" onclick="location.href='/administration/students'">
+                                            <div class="card-block homework">
+                                                <div class="card-text">
+                                                    <h4><i class="fa fa-user"></i>  Schüler hinzufügen</h4>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-6 col-sm-6 col-xs-12">
+                                        <div class="card h-100 teacher-option" onclick="location.href='/administration/teachers/'">
+                                            <div class="card-block homework">
+                                                <div class="card-text">
+                                                    <h4><i class="fa fa-user"></i>  Lehrer hinzufügen</h4>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
+                            </div>
+                            {{/userHasPermission}}
 
-                                {{#if school.fileStorageType}}
-                                <div class="form-group">
-                                    <label>Cloud-Storage Anbieter</label>
-                                    <select name="fileStorageType" type="text">
-                                        {{#each provider}}
-                                            <option value="{{this.value}}" {{#if this.selected}}selected{{/if}}>{{this.label}}</option>
-                                        {{/each}}
-                                    </select>
-                                </div>
-                                {{/if}}
 
-                                <button type="submit" class="btn btn-primary btn-submit">Speichern</button>
-
-                            </form>
                         </div>
                     </div>
                 </div>
