add filter options to search-bar

--- a/views/files/search.hbs
+++ b/views/files/search.hbs
@@ -19,7 +19,7 @@
                         <input value="{{ query }}"
                                name="q"
                                type="text"
-                               class="form-control search-field"
+                               class="form-control search-field file-search"
                                placeholder="Dateien durchsuchen..."/>
                     </div>
                 </div>
