--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -1,4 +1,4 @@
-{{#extend "lib/loggedin" searchLabel="Dateien durchsuchen ..." searchAction="/files/search/"}}
+{{#extend "lib/loggedin" searchLabel="Dateien durchsuchen ..." searchAction="/files/search/" searchClass="file-search"}}
 
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/files/files.css"/>
