--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -189,8 +189,8 @@
                                     <a class="mobile-search-toggle">
                                         <i class="fa fa-search"></i>
                                     </a>
-                                    <div class="input-group input-group-sm">
-                                    <input type="text" class="form-control search-field" placeholder="{{#if searchLabel}}{{searchLabel}}{{else}}Suche nach...{{/if}}" name="q" />
+                                    <div class="input-group input-group-sm {{searchClass}}">
+                                        <input type="text" class="form-control search-field" placeholder="{{#if searchLabel}}{{searchLabel}}{{else}}Suche nach...{{/if}}" name="q" />
                                         <span class="input-group-btn">
                                             <button type="submit" class="btn btn-secondary">
                                                 <i class="fa fa-search"></i>
