--- a/static/styles/files/files.scss
+++ b/static/styles/files/files.scss
@@ -231,6 +231,7 @@
     background: white;
     position: absolute;
     z-index: 5;
+    word-wrap: break-word;
     .filter-option {
         border: 1px solid rgba(0,0,0,.15);
         border-radius: .1rem;
