--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -25,19 +25,29 @@
                 </div>
 
                 <div class="form-group">
+                    <span><Label>Geschlecht</Label><p class="text-muted" style="display: inline"> (optional)</p></span>
+                    <select class="form-control form-control-lg" type="text" name="gender">
+                        <option value="">Geschlecht auswählen</option>
+                        <option {{#ifeq currentUser.gender "male"}}selected{{/ifeq}} value="male">Männlich</option>
+                        <option {{#ifeq currentUser.gender "female"}}selected{{/ifeq}} value="female">Weiblich</option>
+                        <option {{#ifeq currentUser.gender "other"}}selected{{/ifeq}} value="other">Anderes</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
                     <label>E-Mail-Adresse</label>
                     <input type="email" class="form-control" name="email" value="{{ currentUser.email }}">
                 </div>
 
                 <div class="form-group">
                     <label>Aktuelles Passwort</label>
-                    <input type="password" name="password" class="form-control form-control-lg"
+                    <input type="password" name="password" class="form-control"
                            placeholder="***************" required>
                 </div>
 
                 <div class="form-group">
                     <label>Neues Passwort</label>
-                    <input type="password" name="password_new" id="password_new" class="form-control form-control-lg"
+                    <input type="password" name="password_new" id="password_new" class="form-control"
                            placeholder="***************"
                            pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
                            title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen">
@@ -46,7 +56,7 @@
                 <div class="form-group">
                     <label>Neues Passwort</label>
                     <input type="password" name="password_control" id="password_control"
-                           class="form-control form-control-lg" placeholder="***************">
+                           class="form-control" placeholder="***************">
                 </div>
 
                 <div class="form-group">
