save most scripts

--- a/views/content/search.hbs
+++ b/views/content/search.hbs
@@ -2,7 +2,7 @@
 
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/content/search.css"/>
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet"/>
+        <link href="/styles/content/select2.min.css" rel="stylesheet"/>
     {{/content}}
 
     {{#content "page"}}
