--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -80,7 +80,7 @@
                                                                       $('#picture').attr('src', '');
                                                                       $('#file-view').css('display','none');">
                     <video id="my-video" class="video-js vjs-default-skin" onclick="videoClick(event);" autoplay controls preload="auto" data-setup="{'fluid': true}}"></video>
-                    <script src="https://vjs.zencdn.net/5.19.2/video.js"></script>
+                    <script src="/vendor/video.js"></script>
                     <img id="picture">
                     <div id="link"></div>
                 </a>
