--- a/views/topic/components/content-geoGebra.hbs
+++ b/views/topic/components/content-geoGebra.hbs
@@ -1,6 +1,6 @@
 <h4>{{title}}</h4>
 
-<script src="https://cdn.geogebra.org/apps/deployggb.js"></script>
+<script src="/vendor/geoGebra/deployggb.js"></script>
 <div id="applet_container_{{this._id}}"></div>
 <script>
     var applet1 = new GGBApplet({material_id: "{{content.materialId}}", borderColor:"#990000"}, true);
