add files overview page

--- a/static/styles/files/files.scss
+++ b/static/styles/files/files.scss
@@ -244,4 +244,15 @@
     }
 }
 
+.route-files-overview {
+    .card {
+        .card-title {
+            text-align: center;
+        }
+        .card-text {
+            text-align: justify;
+        }
+    }
+}
+
 
