add counter for files

--- a/static/styles/files/files.scss
+++ b/static/styles/files/files.scss
@@ -252,6 +252,9 @@
         .card-text {
             text-align: justify;
         }
+        .text-red {
+            color: $colorHPIRed;
+        }
     }
 }
 
