--- a/views/files/files-overview.hbs
+++ b/views/files/files-overview.hbs
@@ -16,6 +16,11 @@
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="card h-100">
                         <div class="card-block">
+                            <div class="card-text">
+                                <small class="text-muted">
+                                    <i class="fa fa-hashtag text-red"></i> {{this.counter.myFiles}} Dateien
+                                </small>
+                            </div>
                             <h4 class="card-title"><i class="fa fa-user"></i> Meine persönlichen Dateien</h4>
                             <div class="card-text">
                                 Hier findest du alle deine persönlichen Dateien. Auf diese Dateien hast nur du Zugriff, du kannst sie aber auch mit anderen Nutzern teilen.
@@ -30,6 +35,11 @@
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="card h-100">
                         <div class="card-block">
+                            <div class="card-text">
+                                <small class="text-muted">
+                                    <i class="fa fa-hashtag text-red"></i> {{this.counter.courseFiles}} Dateien
+                                </small>
+                            </div>
                             <h4 class="card-title"><i class="fa fa-graduation-cap"></i> Meine Kurs-Dateien</h4>
                             <div class="card-text">
                                 Hier findest du alle Dateien, die in den jeweiligen Kursen im Unterricht verwendet werden. Alle Teilnehmer des Kurses, also der Lehrer und die Schüler, haben auf diese Dateien Zugriff.
