add files overview page (#353)
* add files overview page

* add counter for files

--- a/static/styles/files/files.scss
+++ b/static/styles/files/files.scss
@@ -244,4 +244,18 @@
     }
 }
 
+.route-files-overview {
+    .card {
+        .card-title {
+            text-align: center;
+        }
+        .card-text {
+            text-align: justify;
+        }
+        .text-red {
+            color: $colorHPIRed;
+        }
+    }
+}
+
 
