--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -2,6 +2,7 @@
 
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/courses/course.css"/>
+        <link rel="stylesheet" href="/styles/homework/homework.css"/>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
@@ -137,6 +138,37 @@
                         <a href="/courses/{{../_id}}/tools/add" class="btn btn-secondary margin-top">
                             <i class="fa fa-plus" aria-hidden="true"></i>  Neues Tool hinzufügen</a>
                     {{/userHasPermission}}
+                </div>
+            </div>
+            <hr/>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <h4>Gestellte Aufgaben</h4>
+                        </div>
+                        <ol class="homework">
+                            <div class="row">
+                                {{#each homeworks}}
+                                    {{> 'homework/components/course_overview_card_template'}}
+                                {{/each}}
+                            </div>
+                        </ol>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <h4>Meine Aufgaben</h4>
+                        </div>
+                        <ol class="homework">
+                            <div class="row">
+                                {{#each myhomeworks}}
+                                    {{> 'homework/components/course_overview_card_template'}}
+                                {{/each}}
+                            </div>
+                        </ol>
+                    </div>
                 </div>
             </div>
             <div class="row padding-top">
