--- a/views/administration/forms/form-systems.hbs
+++ b/views/administration/forms/form-systems.hbs
@@ -13,8 +13,25 @@
         {{/each}}
     </select>
 </div>
-
 <div class="form-group">
     <label>Url des Systems</label>
     <input class="form-control" name="url" type="text" value="{{url}}" required />
+</div>
+<hr>
+<div class="panel-group">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <a data-toggle="collapse" href="#collapse{{collapseId}}" class="collapse-toggle"><label>Weitere Informationen (OAuth)</label><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></a>
+        </div>
+        <div id="collapse{{collapseId}}" class="panel-collapse collapse">
+            <div class="form-group">
+                <label>Client-ID</label>
+                <input class="form-control" name="oaClientId" type="text">
+            </div>
+            <div class="form-group">
+                <label>Client-Geheimnis</label>
+                <input class="form-control" name="oaClientSecret" type="text">
+            </div>
+        </div>
+    </div>
 </div>
