--- a/views/administration/systems.hbs
+++ b/views/administration/systems.hbs
@@ -17,13 +17,13 @@
                     </div>
                 </div>
 
-                {{#embed "lib/components/modal-form" method="patch" class="edit-modal"}}
+                {{#embed "lib/components/modal-form" method="patch" class="edit-modal" collapseId=1}}
                     {{#content "fields"}}
                         {{> "administration/forms/form-systems"}}
                     {{/content}}
                 {{/embed}}
 
-                {{#embed "lib/components/modal-form" action="/administration/systems/" method="post" class="add-modal"}}
+                {{#embed "lib/components/modal-form" action="/administration/systems/" method="post" class="add-modal" collapseId=2}}
                     {{#content "fields"}}
                         {{> "administration/forms/form-systems"}}
                     {{/content}}
