add tree layout

--- a/views/files/forms/form-move.hbs
+++ b/views/files/forms/form-move.hbs
@@ -1,4 +1,6 @@
 <div class="form-group">
-    <label>Wählen Sie einen Ordner Aus</label>
-    <!-- rendered in scripts/files.js -->
+    <label>Wählen Sie einen Ordner aus</label>
+    <div class="directories-tree">
+        <!-- rendered in scripts/files.js -->
+    </div>
 </div>
