--- a/views/files/files-grid.hbs
+++ b/views/files/files-grid.hbs
@@ -60,20 +60,7 @@
     {{/content}}
 {{/embed}}
 
-{{#embed "lib/components/modal" class="move-modal" title="Verschieben nach:"}}
-    {{#content "body"}}
-
-        <div class="modal-footer">
-            <button type="button" class="btn btn-secondary btn-close">
-                Abbrechen
-            </button>
-
-            <button type="submit" class="btn btn-primary btn-submit">
-                Verschieben
-            </button>
-        </div>
-    {{/content}}
-{{/embed}}{{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
+{{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
     {{#content "body"}}
 
         <div class="modal-footer">
