working moving, todo: design and course folders

--- a/views/files/files-grid.hbs
+++ b/views/files/files-grid.hbs
@@ -41,7 +41,10 @@
                                 </a>
 
                                 <a href="#"
-                                   class="btn-file-move">
+                                   class="btn-file-move"
+                                   data-file-path="{{this.path}}"
+                                   data-file-id="{{this._id}}"
+                                   data-file-name="{{this.name}}">
                                     <i class="fa fa-share"></i>
                                 </a>
                                 <small class="file-info" id="{{this.name}}"></small>
