--- a/views/files/forms/form-move.hbs
+++ b/views/files/forms/form-move.hbs
@@ -4,3 +4,7 @@
         <!-- rendered in scripts/files.js -->
     </div>
 </div>
+<!-- hidden field -->
+<input class="form-control" hidden name="fileId" />
+<input class="form-control" hidden name="fileName" />
+<input class="form-control" hidden name="filePath" />
