--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -1,32 +1,19 @@
 {{#content "styles" mode="append"}}
     <link rel="stylesheet" href="/styles/homework/overview.css"/>
-    <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
     <link rel="import" href="/vendor/m.e.i.n.e.l/circular-progress.html">
 {{/content}}
 {{#content "scripts" mode="append"}}
     <script src="/vendor/webcomponents-lite.min.js" defer></script>
-    <script src="/vendor/ckeditor/ckeditor.js" defer></script>
     <script src="/scripts/moment/moment.js" defer></script>
-    <script src="/scripts/jquery/jquery.datetimepicker.full.min.js" type="text/javascript" defer></script>
-    <script>
-        window.addEventListener('DOMContentLoaded', function() {
-            CKEDITOR.replace($('.add-modal').find("textarea")[0], function (textarea, config) {
-                if (!textarea.classList.contains("customckeditor")) return false;
-            });
-            CKEDITOR.replace($('.edit-modal').find("textarea")[0], function (textarea, config) {
-                if (!textarea.classList.contains("customckeditor")) return false;
-            });
-        });
-    </script>
 {{/content}}
 {{#extend "homework/homework"}}
     {{#content "page"}}
         <div class="route-homework">
             <section class="section-homework">
-                <button type="submit" class="btn btn-primary btn-add create">
+                <a href="/homework/create" class="btn btn-primary btn-add create">
                     <i class="fa fa-plus" aria-hidden="true"></i>
                     <p>Aufgabe hinzufügen</p>
-                </button>
+                </a>
                 
                 <div class="form-group sort">
                     <select name="sort" id="sortselection" data-placeholder="Sortieren">
@@ -60,16 +47,6 @@
                         {{> "lib/components/pagination" settings=pagination }}
                     </div>
                 </ol>
-                {{#embed "lib/components/modal-form" method="patch" class="edit-modal"}}
-                    {{#content "fields"}}
-                        {{> "homework/form-assignment"}}
-                    {{/content}}
-                {{/embed}}
-                {{#embed "lib/components/modal-form" method="post" class="add-modal" action="/homework/"}}
-                    {{#content "fields"}}
-                        {{> "homework/form-assignment"}}
-                    {{/content}}
-                {{/embed}}
                 {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
                     {{#content "body"}}
                         <div class="modal-footer">
