--- a/views/homework/edit.hbs
+++ b/views/homework/edit.hbs
@@ -62,9 +62,9 @@
             <div class="form-group">
                 <label>Kurs</label>
                 <select name="courseId" data-placeholder="Kurs auswählen" >
-                    <option value="" selected>Keine Zuordnung</option>
+                    <option value="" {{#unless assignment.courseId}}selected{{/unless}}>Keine Zuordnung</option>
                     {{#each courses}}
-                        <option value="{{this._id}}">{{this.name}}</option>
+                        <option value="{{this._id}}" {{#ifvalue this._id value=@root.assignment.courseId._id}}selected{{/ifvalue}}>{{this.name}}</option>
                     {{/each}}
                 </select>
                 {{#if isStudent}}
