--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -10,7 +10,7 @@
     {{#content "page"}}
         <div class="route-homework">
             <section class="section-homework">
-                <a href="/homework/create" class="btn btn-primary btn-add create">
+                <a href="/homework/new" class="btn btn-primary btn-add create">
                     <i class="fa fa-plus" aria-hidden="true"></i>
                     <p>Aufgabe hinzufügen</p>
                 </a>
