added add Buttons to courses overview

--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -154,6 +154,8 @@
                                 {{/each}}
                             </div>
                         </ol>
+                        <a href="/homework/new?course={{../_id}}" class="btn btn-secondary margin-top">
+                            <i class="fa fa-plus" aria-hidden="true"></i> Neue Aufgabe</a>
                     </div>
                 </div>
                 <div class="col-sm-6">
@@ -168,6 +170,8 @@
                                 {{/each}}
                             </div>
                         </ol>
+                        <a href="/homework/new?course={{../_id}}&private=true" class="btn btn-secondary margin-top">
+                            <i class="fa fa-plus" aria-hidden="true"></i> Neue private Aufgabe</a>
                     </div>
                 </div>
             </div>
