--- a/views/homework/edit.hbs
+++ b/views/homework/edit.hbs
@@ -35,10 +35,27 @@
                     }
                 }
             });
-            
+
             Mousetrap.bind(['command+s', 'ctrl+s'], function(e) {
                 document.getElementById('homework-form').submit();
                 return false;
+            });
+            
+
+            $("#coursePicker").change(function(e,s){
+                if(s.selected!=""){
+                    $.ajax({
+                        url: "/courses/"+s.selected+"/json"
+                    }).done(function( r ) {
+                        console.log("Response:",typeof r.lessons.data);
+                        let optionlist = [{'text':'Keine Zuordnung','value':''}]
+                        data = r.lessons.data[0];
+                        data.foreach(function(e){
+                           optionlist.push({'text':e.name,'value':e._id})
+                        });
+                        document.getElementById("lessonPicker").options = optionlist
+                    });
+                }
             });
         });
     </script>
@@ -66,20 +83,16 @@
 
             <div class="form-group">
                 <label>Kurs</label>
-                <select name="courseId" data-placeholder="Kurs auswählen" >
+                <select name="courseId" id="coursePicker" data-placeholder="Kurs auswählen" >
                     <option value="" {{#unless assignment.courseId}}selected{{/unless}}>Keine Zuordnung</option>
                     {{#each courses}}
                         <option value="{{this._id}}" {{#ifvalue this._id value=@root.assignment.courseId._id}}selected{{/ifvalue}}>{{this.name}}</option>
                     {{/each}}
                 </select>
-                {{#if isStudent}}
-                    <input name="private" type="hidden" data-force-value="true" value="private" />
-                {{else}}
-                    <label>
-                        <input name="private" type="checkbox" value="private" {{#if assignment.private}}checked="checked"{{/if}}/>
-                        Private Aufgabe (nur für mich sichtbar)
-                    </label>
-                {{/if}}
+                <label>Thema</label>
+                <select name="lessonId" id="lessonPicker" data-placeholder="Thema auswählen" >
+                    <option value="" {{#unless assignment.courseId}}selected{{/unless}}>Keine Themen in diesem Kurs</option>
+                </select>
             </div>
 
             <div class="form-group">
@@ -102,16 +115,22 @@
                 </div>
             </div>
 
-
             {{#unless isStudent}}
             <div class="form-group">
+                <label>
+                    <input name="private" type="checkbox" value="private" {{#if assignment.private}}checked="checked"{{/if}}/>
+                    Private Aufgabe (nur für mich sichtbar)
+                </label></br>
                 <label>
                     <input name="publicSubmissions" type="checkbox" value="public" {{#if assignment.publicSubmissions}}checked="checked"{{/if}}/>
                     Schülerabgaben untereinander sichtbar
                 </label>
             </div>
+            {{else}}
+            <div class="form-group">
+                <input name="private" type="hidden" data-force-value="true" value="private" />
+            </div>
             {{/unless}}
-
 
 
 
