--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -59,12 +59,12 @@
 						<div class="col-sm-6 col-xs-12 col-md-4">
 							<div class="card card-block folder" onclick="location.href='{{this.url}}';">
 								<strong class="card-title-directory">
-									<i class="fa fa-folder" aria-hidden="true"></i> {{this.name}}
+									<i class="fa fa-folder" aria-hidden="true"></i>{{#if this.label}}{{this.label}}{{else}}{{this.name}}{{/if}}
 								</strong>
 								<a href="/files/directory/"
 								   target="_blank"
 								   data-method="delete"
-								   data-file-name="{{this.name}}"
+                                   data-file-name="{{this.name}}"
 								   data-file-path="{{this.path}}">
 									<i class="fa fa-trash-o pull-right"></i>
 								</a>
